fix iPhone menu icon alignment

--- a/src/components/menuIcon/menuIcon.module.scss
+++ b/src/components/menuIcon/menuIcon.module.scss
@@ -4,7 +4,8 @@
   align-items: center;
   cursor: pointer;
   position: absolute;
-  left: 0;
+  left: 10px;
+  padding: 0;
   top: 3px;
   color: #FFF;
   border: 0;
